<resources>
    <string name="root_dir">/</string>
    <string name="system_dir">/system</string>
    <string name="shell_required_commands">/system/bin/cat, /system/bin/chmod, /system/bin/chown, /system/bin/dd, /system/bin/df, /system/bin/gzip, /system/bin/id, /system/bin/kill, /system/bin/ln, /system/bin/ls, /system/bin/mkdir, /system/bin/mount, /system/bin/mv, /system/bin/ps, /system/bin/rm, /system/bin/sh, /system/xbin/awk, /system/xbin/bunzip2, /system/xbin/busybox, /system/xbin/bzip2, /system/xbin/cp, /system/xbin/cut, /system/xbin/dirname, /system/xbin/echo, /system/xbin/find, /system/xbin/grep, /system/xbin/groups, /system/xbin/gunzip, /system/xbin/pwd, /system/xbin/readlink, /system/xbin/stat, /system/xbin/su, /system/xbin/tar, /system/xbin/xargs, /system/xbin/md5sum, /system/xbin/sha1sum</string>
    <string name="shell_optional_commands">zip=/system/xbin/zip, unzip=/system/xbin/unzip, unlzma=/system/xbin/unlzma, unxz=/system/xbin/unxz, uncompress=/system/xbin/uncompress, unrar=/system/xbin/unrar</string>
    <string name="mounts_file">/proc/mounts</string>
    <string name="system_props_file">/system/build.prop</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="app_name">File Manager</string>
    <string name="app_description">A letv file manager</string>
    <string name="size_bytes">B</string>
    <string name="size_kilobytes">kB</string>
    <string name="size_megabytes">MB</string>
    <string name="size_gigabytes">GB</string>
    <string name="datetime_format_order">%1$s %2$s</string>
    <string name="device_blockdevice">Block device</string>
    <string name="device_characterdevice">Character device</string>
    <string name="device_namedpipe">Named pipe</string>
    <string name="device_domainsocket">Domain socket</string>
    <string name="mount_point_readonly">RO</string>
    <string name="mount_point_readwrite">RW</string>
    <string name="ok">@android:string/ok</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="all">All</string>
    <string name="overwrite">Overwrite</string>
    <string name="select">Select</string>
    <string name="root_directory_name">&lt;Root folder></string>
    <string name="search_result_name">Search: %1$s</string>
    <string name="loading_message">Loading…</string>
    <string name="computing_message">%1$s</string>
    <string name="computing_message_ln">%1$s</string>
    <string name="cancelled_message">Cancelled.</string>
    <string name="error_message">Error.</string>
    <string name="copy_text_cd">Tap to copy text to clipboard</string>
    <string name="copy_text_msg">Text copied to clipboard</string>
    <string name="warning_title">Warning</string>
    <string name="error_title">Error detected</string>
    <string name="confirm_operation">Confirm operation</string>
    <string name="confirm_overwrite">Confirm overwrite</string>
    <string name="confirm_deletion">Confirm deletion</string>
    <string name="msgs_change_to_prompt_access_mode_title">Confirm switch</string>
    <string name="msgs_change_to_prompt_access_mode_msg">"Unable to run in Root Access mode. Changing to Safe mode.

Apply this change?"</string>
    <string name="msgs_cant_create_console">Unable to gain the required privileges to function.</string>
    <string name="msgs_privileged_console_alloc_failed">Unable to run in Root Access mode. Changing to Safe mode.</string>
    <string name="msgs_settings_save_failure">The setting could not be applied or stored.</string>
    <string name="msgs_settings_invalid_initial_directory">"The initial folder '%1$s' is invalid. Changing to root folder."</string>
    <string name="msgs_success">The operation was completed successfully.</string>
    <string name="msgs_unknown">An error was detected. The operation was unsuccessful.</string>
    <string name="msgs_insufficient_permissions">This operation requires elevated permissions. Try changing to Root Access mode.</string>
    <string name="msgs_file_not_found">The file or folder was not found.</string>
    <string name="msgs_command_not_found">"The operation's command was not found or has an invalid definition."</string>
    <string name="msgs_io_failed">Read/write failure.</string>
    <string name="msgs_operation_timeout">The operation timed out.</string>
    <string name="msgs_operation_failure">The operation failed.</string>
    <string name="msgs_console_alloc_failure">An internal error occurred.</string>
    <string name="msgs_operation_can_not_be_cancelled">The operation cannot be cancelled.</string>
    <string name="history">History</string>
    <string name="msgs_history_empty">History is empty.</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="actions_menu_properties_current_folder">Properties</string>
    <string name="actions_menu_refresh">Refresh</string>
    <string name="actions_menu_new_directory">New folder</string>
    <string name="actions_menu_new_file">New file</string>
    <string name="actions_menu_select_all">Select all</string>
    <string name="actions_menu_deselect_all">Deselect all</string>
    <string name="actions_menu_select">Select</string>
    <string name="actions_menu_deselect">Deselect</string>
    <string name="actions_menu_paste_selection">Copy selection here</string>
    <string name="actions_menu_move_selection">Move selection here</string>
    <string name="actions_menu_delete_selection">Delete selection</string>
    <string name="actions_menu_compress_selection">Compress selection</string>
    <string name="actions_menu_create_link">Create link</string>
    <string name="actions_menu_open">Open</string>
    <string name="actions_menu_open_with">Open with</string>
    <string name="actions_menu_execute">Execute</string>
    <string name="actions_menu_send">Send</string>
    <string name="actions_menu_send_selection">Send selection</string>
    <string name="actions_menu_compress">Compress</string>
    <string name="actions_menu_extract">Extract</string>
    <string name="actions_menu_delete">Delete</string>
    <string name="actions_menu_rename">Rename</string>
    <string name="actions_menu_create_copy">Create copy</string>
    <string name="actions_menu_properties">Properties</string>
    <string name="actions_menu_add_to_bookmarks">Add to bookmarks</string>
    <string name="actions_menu_add_shortcut">Add shortcut</string>
    <string name="actions_menu_open_parent_folder">Open parent</string>
    <string name="actions_menu_compute_checksum">Compute checksum</string>
    <string name="associations_dialog_remember">Remember selection</string>
    <string name="pref_general">General settings</string>
    <string name="pref_search">Search options</string>
    <string name="pref_editor">Editor options</string>
    <string name="pref_themes">Themes</string>
    <string name="pref_about">About</string>
    <string name="pref_general_behaviour_category">General</string>
    <string name="pref_case_sensitive_sort">Case-sensitive</string>
    <string name="pref_case_sensitive_sort_summary">Consider case when navigating or sorting search results</string>
    <string name="pref_filetime_format_mode">Date/time format</string>
    <string name="pref_disk_usage_warning_level">Disk usage warning</string>
    <string name="pref_compute_folder_statistics">Compute folder statistics</string>
    <string name="pref_compute_folder_statistics_on">Warning! The computation of folder statistics is costly in time and system resources</string>
    <string name="pref_display_thumbs">Preview</string>
    <string name="pref_display_thumbs_summary">Show a preview image for apps, music files, pictures and videos.</string>
    <string name="pref_use_flinger">Use swipe gestures</string>
    <string name="pref_use_flinger_summary">Use swipe left to right gesture detection to delete files or folders.</string>
    <string name="pref_general_advanced_settings_category">Advanced</string>
    <string name="pref_access_mode">Access mode</string>
    <string name="pref_restrict_secondary_users_access_title">Restrict users access</string>
    <string name="pref_restrict_secondary_users_access_summary">Restrict access to the whole system to secondary users</string>
    <string name="pref_search_results_category">Results</string>
    <string name="pref_show_relevance_widget">Show relevance widget</string>
    <string name="pref_highlight_terms">Highlight search terms</string>
    <string name="pref_sort_search_results_mode">Sort results mode</string>
    <string name="pref_search_privacity_category">Privacy</string>
    <string name="pref_save_search_terms">Save search terms</string>
    <string name="pref_save_search_terms_on">Search terms will be saved and used as suggestions in future searches</string>
    <string name="pref_save_search_terms_off">Search terms will not be saved</string>
    <string name="pref_remove_saved_search_terms">Remove saved search terms</string>
    <string name="pref_remove_saved_search_terms_summary">Tap to remove all the saved search terms</string>
    <string name="pref_editor_behaviour_category">Behaviour</string>
    <string name="pref_no_suggestions">No suggestions</string>
    <string name="pref_no_suggestions_desc">Do not display dictionary suggestions while editing the file</string>
    <string name="pref_word_wrap">Word wrap</string>
    <string name="pref_hexdump">Hexdump binary files</string>
    <string name="pref_hexdump_desc">When opening a binary file, generate an hexdump of the file and open it in the hex viewer.</string>
    <string name="pref_editor_syntax_highlight_category">Syntax highlight</string>
    <string name="pref_syntax_highlight">Syntax highlight</string>
    <string name="pref_syntax_highlight_desc">Highlight the syntax of the file displayed in the editor (only when a syntax highlight processor is available for the type of file)</string>
    <string name="pref_syntax_highlight_color_scheme">Color scheme</string>
    <string name="pref_syntax_highlight_color_scheme_desc">Tap to select the syntax highlight color scheme</string>
    <string name="pref_syntax_sh_use_theme_default">Use theme default</string>
    <string name="pref_syntax_sh_use_theme_default_desc">Use the default syntax highlight of the current theme</string>
    <string name="pref_editor_sh_item_category">Items</string>
    <string name="pref_debug_traces">Log debugging information</string>
    <string name="ash_reset_color_scheme">Tap to restore the default theme color scheme</string>
    <string name="ash_text">Text</string>
    <string name="ash_assignment">Assignment</string>
    <string name="ash_singleline_comment">Single-Line comment</string>
    <string name="ash_multiline_comment">Multi-Line comment</string>
    <string name="ash_keyword">Keyword</string>
    <string name="ash_quoted_string">Quoted string</string>
    <string name="ash_variable">Variable</string>
    <string name="concel">Cancel</string>
    <string name="edit">Select</string>
    <string name="association_title">Select app</string>
    <string name="unkonw_file">Unknown file format</string>
    <string name="open_by_txt">Open as text</string>
    <string name="open_by_audio">Open as audio</string>
    <string name="open_by_vedio">Open as video</string>
    <string name="open_by_img">Open as image</string>
    <string name="select_all">Select all</string>
</resources>