<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_search_results_category" android:key="search_results">
        <CheckBoxPreference android:persistent="true" android:title="@string/pref_highlight_terms" android:key="cm_filemanager_highlight_terms" android:defaultValue="true" />
        <CheckBoxPreference android:persistent="true" android:title="@string/pref_show_relevance_widget" android:key="cm_filemanager_show_relevance_widget" android:defaultValue="true" />
        <ListPreference android:persistent="true" android:entries="@array/sort_search_results_mode_labels" android:title="@string/pref_sort_search_results_mode" android:key="cm_filemanager_sort_search_results_mode" android:defaultValue="2" android:entryValues="@array/sort_search_results_mode_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_search_privacity_category" android:key="search_privacity">
        <CheckBoxPreference android:persistent="true" android:title="@string/pref_save_search_terms" android:key="cm_filemanager_save_search_terms" android:defaultValue="true" android:summaryOn="@string/pref_save_search_terms_on" android:summaryOff="@string/pref_save_search_terms_off" />
        <Preference android:title="@string/pref_remove_saved_search_terms" android:key="cm_filemanager_remove_saved_search_terms" android:summary="@string/pref_remove_saved_search_terms_summary" android:dependency="cm_filemanager_save_search_terms" />
    </PreferenceCategory>
</PreferenceScreen>