<?xml version="1.0" encoding="utf-8"?>
<preference-headers
  xmlns:android="http://schemas.android.com/apk/res/android">
    <header android:title="@string/pref_general" android:fragment="com.letv.android.filemanager.activities.preferences.GeneralPreferenceFragment" />
    <header android:title="@string/pref_search" android:fragment="com.letv.android.filemanager.activities.preferences.SearchPreferenceFragment" />
    <header android:title="@string/pref_editor" android:fragment="com.letv.android.filemanager.activities.preferences.EditorPreferenceFragment" />
    <header android:title="@string/pref_themes" android:fragment="com.letv.android.filemanager.activities.preferences.ThemesPreferenceFragment" />
    <header android:title="@string/pref_about" android:summary="@null" />
</preference-headers>